tests/baselines/reference/noImplicitAnyForwardReferencedInterface.errors.txt
noImplicitAnyForwardReferencedInterface.ts(5,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== noImplicitAnyForwardReferencedInterface.ts (1 errors) ====
    declare var x: Entry;
    
    interface Entry {
        // Should return error for implicit any.
        new ();
        ~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }